package tags;

public class Tag {

    public String toHTML(){
        return "<balise>";
    }
}
